force-app/main/default/objects/gmpkg__GanttDependency__c/gmpkg__GanttDependency__c.object-meta.xml
<CustomObject>
    <label>GanttDependency</label>
    <nameField>
        <label>GanttDependency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GanttDependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>