force-app/main/default/objects/gmpkg__GanttDependency__c/fields/gmpkg__Delay__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Delay__c</fullName>
    <label>Delay</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
                <default>true</default>
                <label>Immediate</label>
            </value>
            <value>
                <fullName>Lag by</fullName>
            </value>
            <value>
                <fullName>Lead by</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>