force-app/main/default/objects/gmpkg__GanttDependency__c/fields/gmpkg__DelaySpan__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__DelaySpan__c</fullName>
    <label>DelaySpan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>