force-app/main/default/objects/gmpkg__GanttDependency__c/fields/gmpkg__DelaySpanType__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__DelaySpanType__c</fullName>
    <label>DelaySpanType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>days</fullName>
            </value>
            <value>
                <fullName>weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>