force-app/main/default/objects/gmpkg__GanttDependency__c/fields/gmpkg__PredecessorId__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__PredecessorId__c</fullName>
    <label>PredecessorId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>