force-app/main/default/objects/gmpkg__GanttDependency__c/fields/gmpkg__SuccessorId__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__SuccessorId__c</fullName>
    <label>SuccessorId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>