force-app/main/default/objects/gmpkg__GanttDependency__c/fields/gmpkg__Type__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>start-to-start</fullName>
                <label>Start-To-Start</label>
            </value>
            <value>
                <fullName>start-to-end</fullName>
                <label>Start-To-Finish</label>
            </value>
            <value>
                <fullName>end-to-start</fullName>
                <label>Finish-To-Start</label>
            </value>
            <value>
                <fullName>end-to-end</fullName>
                <label>Finish-To-Finish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>