force-app/main/default/objects/gmpkg__GanttDependency__c/listViews/gmpkg__All.listView-meta.xml
<ListView>
    <fullName>gmpkg__All</fullName>
    <columns>NAME</columns>
    <columns>gmpkg__PredecessorId__c</columns>
    <columns>gmpkg__SuccessorId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>